--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-select/ng-select": "^4.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@yaireo/tagify": "^4.12.0",
@@ -47,7 +48,7 @@
     "ngx-tagify": "^0.7.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
-    "sweetalert2": "^11.10.1",
+    "sweetalert2": "^11.6.13",
     "swiper": "^8.2.4",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
