--- a/package.json
+++ b/package.json
@@ -31,8 +31,13 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@yaireo/tagify": "^4.12.0",
     "angular-chosen": "^1.0.8",
+    "angular-datatables": "^13.1.0",
     "chart.js": "^2.9.4",
     "crypto-js": "^4.2.0",
+    "datatables.net": "^1.12.1",
+    "datatables.net-buttons": "^2.2.3",
+    "datatables.net-buttons-dt": "^2.2.3",
+    "datatables.net-dt": "^1.12.1",
     "footable-v3": "^1.0.0",
     "jquery": "^3.6.0",
     "just-lightbox": "^1.0.1",
