--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": false,
+    "strictNullChecks":false,
     "noImplicitOverride": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
