--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@angular/compiler-cli": "^14.0.4",
     "@fullcalendar/angular": "^5.11.2",
     "@types/crypto-js": "^4.2.1",
+    "@types/datatables.net": "^1.10.28",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/jquery": "^3.5.14",
