--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@yaireo/tagify": "^4.12.0",
+    "angular-archwizard": "^7.0.0",
     "angular-chosen": "^1.0.8",
     "angular-datatables": "^13.1.0",
     "chart.js": "^2.9.4",
