--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
-  "compilerOptions": {
-    "noPropertyAccessFromIndexSignature": false,
+  "compilerOptions": {    
     "noImplicitAny": false,
+    "noPropertyAccessFromIndexSignature": false,
     "strictPropertyInitialization": false,
     "skipLibCheck": true,
     "baseUrl": "./",
@@ -19,7 +19,7 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
-    "importHelpers": false,
+    "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
     "lib": [
