--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,5 +39,6 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": ["src/**/*.ts"]
 }
