--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ng2-charts": "^2.4.2",
     "ng2-daterangepicker": "^3.0.1",
     "ngx-doc-viewer": "^15.0.1",
+    "ngx-drag-drop": "^18.0.2",
     "ngx-dropzone": "^3.1.0",
     "ngx-lightbox": "^2.6.1",
     "ngx-spinner": "^16.0.2",
@@ -78,7 +79,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.4",
-    "ts-node": "^8.1.0"
+    "ts-node": "^8.1.0",
+    "typescript": "~4.6.4"
   }
 }
